Astra Militarum updates

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -97,6 +97,8 @@
            value="Restores hitpoints of target allied infantry unit."/>
     <entry name="AstraMilitarum/NightshroudFlavor"
            value="Calling upon the power of the empyrean, the psyker cloaks their allies in a flowing curtain of shadow, concealing them from the enemy."/>
+    <entry name="AstraMilitarum/PowerOfTheMachineSpiritDescription"
+           value="<string name='Actions/PowerOfTheMachineSpiritDescription'/>. Increases the health regeneration with <string name='Upgrades/AstraMilitarum/ShowThemSteel'/> upgrade."/>
     <entry name="AstraMilitarum/SeniorOfficerTempestus"
            value="Senior Officer"/>
     <entry name="AstraMilitarum/SeniorOfficerTempestusDescription"
