--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -207,7 +207,7 @@
     <entry name="AstraMilitarum/WallOfMuscle"
            value="Wall Of Muscle"/>
     <entry name="AstraMilitarum/WallOfMuscleDescription"
-           value="Reduces the ranged attacks of an opponent."/>
+           value="Reduces the ranged attacks."/>
     <entry name="AstraMilitarum/WallOfMuscleFlavor"
            value="“Brute force not work? It because you not use enough of it!“<br/>—Karg, Ogryn Bone'ead"/>
 
