Data Analysis implementation

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -19,7 +19,7 @@
     <entry name="AdeptusMechanicus/DataAnalysis"
            value="Data Analysis"/>
     <entry name="AdeptusMechanicus/DataAnalysisDescription"
-           value=""/>
+           value="Increases experience gained of non-hero Doctrina Imperative units."/>
     <entry name="AdeptusMechanicus/DuneriderShell"
            value="Dunerider Shell"/>
     <entry name="AdeptusMechanicus/DuneriderShellDescription"
