--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -23,7 +23,7 @@
     <entry name="AdeptusMechanicus/DuneriderShell"
            value="Dunerider Shell"/>
     <entry name="AdeptusMechanicus/DuneriderShellDescription"
-           value=""/>
+           value="Increases the armour and negates open topped effect for Skorpius Duneriders."/>
     <entry name="AdeptusMechanicus/FortressOfMars"
            value="Fortress Of Mars"/>
     <entry name="AdeptusMechanicus/FortressOfMarsDescription"
