--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -27,7 +27,7 @@
     <entry name="AdeptusMechanicus/FortressOfMars"
            value="Fortress Of Mars"/>
     <entry name="AdeptusMechanicus/FortressOfMarsDescription"
-           value=""/>
+           value="Increases the armour and the attack range of cities."/>
     <entry name="AdeptusMechanicus/GravitonMastery"
            value="Graviton Mastery"/>
     <entry name="AdeptusMechanicus/GravitonMasteryDescription"
