--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -34,6 +34,10 @@
            value="Increases the invulnerable damage reduction."/>
     <entry name="AdeptusMechanicus/GalvanicFieldDescription"
            value="Increases the armour penetration and accuracy."/>
+    <entry name="AdeptusMechanicus/GravitonPull"
+           value="Graviton Pull"/>
+    <entry name="AdeptusMechanicus/GravitonPullDescription"
+           value="Slowed down."/>
     <entry name="AdeptusMechanicus/TechAdept"
            value="Tech-Adept"/> <!-- Tech-Priest Manipulus ability -->
     <entry name="AdeptusMechanicus/TechAdeptDescription"
