--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -35,7 +35,7 @@
     <entry name="AdeptusMechanicus/GravitonPull"
            value="Graviton Pull"/>
     <entry name="AdeptusMechanicus/GravitonPullDescription"
-           value=""/>
+           value="Grants Skorpius Duneriders, Skitarii Rangers and Archaeopter Transvector ability to temporary slow down enemy unit."/>
     <entry name="AdeptusMechanicus/MartialPlating"
            value="Martial Plating"/>
     <entry name="AdeptusMechanicus/MartialPlatingDescription"
