Martial Plating upgrade

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -50,6 +50,18 @@
            value="Increases the armour."/>
     <entry name="AdeptusMechanicus/MasterOfMachinesFlavor"
            value="“Our enemies may rest but rust never sleeps.”<br/>—Tech-Priest Jung, Forge World Gehenna"/>
+    <entry name="AdeptusMechanicus/MartialPlatingOnagerDunecrawler"
+           value="Martial Plating"/>
+    <entry name="AdeptusMechanicus/MartialPlatingOnagerDunecrawlerDescription"
+           value="Increases the hitpoints."/>
+    <entry name="AdeptusMechanicus/MartialPlatingSkorpiusDisintegrator"
+           value="Martial Plating"/>
+    <entry name="AdeptusMechanicus/MartialPlatingSkorpiusDisintegratorDescription"
+           value="Increases the hitpoints."/>
+    <entry name="AdeptusMechanicus/MartialPlatingIronstriderBallistarius"
+           value="Martial Plating"/>
+    <entry name="AdeptusMechanicus/MartialPlatingIronstriderBallistariusDescription"
+           value="Increases the hitpoints."/>
     <entry name="AdeptusMechanicus/ReprogramKastelanRobot"
            value="Reprogrammed Kastelan Robot"/>
     <entry name="AdeptusMechanicus/ReprogramKastelanRobotDescription"
