--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -39,7 +39,7 @@
     <entry name="AdeptusMechanicus/MartialPlating"
            value="Martial Plating"/>
     <entry name="AdeptusMechanicus/MartialPlatingDescription"
-           value=""/>
+           value="Increases the hitpoints of Onager Dunecrawlers, Ironstrider Ballistariuses and Skorpius Disintegrators."/>
     <entry name="AdeptusMechanicus/MatterOverMind"
            value="Matter Over Mind"/>
     <entry name="AdeptusMechanicus/MatterOverMindDescription"
