Matter Over Mind upgrade

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -43,7 +43,7 @@
     <entry name="AdeptusMechanicus/MatterOverMind"
            value="Matter Over Mind"/>
     <entry name="AdeptusMechanicus/MatterOverMindDescription"
-           value=""/>
+           value="Gives heroes and Cybernetica Datasmiths ability to heal infantry units."/>
     <entry name="AdeptusMechanicus/NoEscape"
            value="No Escape"/>
     <entry name="AdeptusMechanicus/NoEscapeDescription"
