--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -44,6 +44,8 @@
            value="Grants nearby allied Kastelan Robots ability to not suffer accuracy loss on hit points loss, increases their accuracy. Increases nearby allied Fulgurite Electro Priests attacks."/>
     <entry name="AdeptusMechanicus/DataBlessedAutosermonFlavor"
            value="Struck with an infoload of revelation, truly blessed Tech-Priests will override the sacred canticles to deliver the Machine God’s adaptive wisdom."/>
+    <entry name="AdeptusMechanicus/MasterOfMachinesDescription"
+           value="Restores the hitpoints of the target vehicle or fortification, or any unit with <string name='AdeptusMechanicus/MatterOverMind'/> upgrade."/>
 
     <entry name="AstraMilitarum/AdditionalFlamer"
            value="Install Flamer"/>
