No Escape upgrade

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -51,7 +51,7 @@
     <entry name="AdeptusMechanicus/NoEscape"
            value="No Escape"/>
     <entry name="AdeptusMechanicus/NoEscapeDescription"
-           value=""/>
+           value="Increases the duration of Graviton Pull effect."/>
     <entry name="AdeptusMechanicus/PowerOverwhelming"
            value="Power Overwhelming"/>
     <entry name="AdeptusMechanicus/PowerOverwhelmingDescription"
