--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -9,7 +9,7 @@
     <entry name="AdeptusMechanicus/CommandUplinkDescription"
            value="Adeptus Mechanicus infantry units cannot be shaken or broken."/>
     <entry name="AdeptusMechanicus/EnrichedRoundsDescription"
-           value="Increases the damage of nearby allied Adeptus Mechanicus infantry units."/>
+           value="Grants additional actions to target infantry unit, but it dies next turn of over saturation."/>
     <entry name="AdeptusMechanicus/ProtectorImperativeDescription"
            value="Increases the ranged accuracy, but decreases the armour of Doctrina Imperatives units. Cost scales with the amount of affected units (up to 10)."/>
     <entry name="AdeptusMechanicus/IonShield"
@@ -30,12 +30,22 @@
            value="Graviton Pull"/>
     <entry name="AdeptusMechanicus/GravitonPullDescription"
            value="Temporary slows down target enemy unit."/>
+    <entry name="AdeptusMechanicus/SetupOutpost"
+           value="Setup Outpost"/>
+    <entry name="AdeptusMechanicus/SetupOutpostDescription"
+           value="Sets up temporary outpost on a target unoccupied land tile."/>
     <entry name="AdeptusMechanicus/TechAdept"
            value="Tech-Adept"/> <!-- Tech-Priest Manipulus ability -->
     <entry name="AdeptusMechanicus/TechAdeptDescription"
            value="Increases healing rate of nearby allied vehicles and fortifications."/>
     <entry name="AdeptusMechanicus/TechAdeptFlavor"
            value="Repairing war engines damaged in the crusade is a holy task."/>
+    <entry name="AdeptusMechanicus/RadSaturationMarshall"
+           value="Rad-Saturation"/>
+    <entry name="AdeptusMechanicus/RadSaturationMarshallDescription"
+           value="Damages nearby enemy infantry and monstrous creature units each turn. Increases the damage and the armour penetration of Rad-Saturation for nearby allied units."/>
+    <entry name="AdeptusMechanicus/RadSaturationMarshallFlavor"
+           value="Harnessing the destructive energies of forge worlds within their weaponry, certain Skitarii are so soaked in radiation that even to approach them is to confer a death sentence upon yourself. Victory for them is pyrrhic, as this radiation burns through even their heavy armour plate, slowly poisoning them to death even as their carbines bring about the (much quicker) demise of their enemies."/>
     <entry name="AdeptusMechanicus/ReprogramKastelanRobot"
            value="Reprogram Kastelan Robot"/>
     <entry name="AdeptusMechanicus/ReprogramKastelanRobotDescription"
